--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "types": "module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,9 +14,17 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/ahad22x/webtec/issues"
   },
-  "homepage": "https://github.com/ahad22x/webtec#readme"
+  "homepage": "https://github.com/ahad22x/webtec#readme",
+  "devDependencies": {
+    "@eslint/css": "^0.11.0",
+    "@eslint/js": "^9.34.0",
+    "@eslint/json": "^0.13.2",
+    "eslint": "^9.34.0",
+    "globals": "^16.3.0",
+    "http-server": "^14.1.1",
+    "typescript-eslint": "^8.42.0"
+  }
 }
